[project]
name = "ai-sidekick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "gradio>=5.41.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-google-community[gmail]>=2.0.7",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.3",
    "openai>=1.99.1",
    "playwright>=1.54.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "wikipedia>=1.4.0",
    "wikipedia-api>=0.8.1",
]
